--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^16.8.6",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "trilogycomponents": "^1.0.0"
   },
   "devDependencies": {
     "@types/next": "^8.0.3",
