--- a/package.json
+++ b/package.json
@@ -16,11 +16,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "^8.0.4",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "^6.0.1",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "trilogycomponents": "^1.0.0"
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "@types/next": "^8.0.3",
