--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "^8.0.4",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "trilogycomponents": "^1.0.1"
   },
   "devDependencies": {
     "@types/next": "^8.0.3",
